# exercism

./: README.md  keycloak-overview.md  memory_management_by_language.md
python/: .gitignore  Makefile  README.md  pyproject.toml
python/_grpc/: README.md  client.py  doubler_service_pb2.py
python/_kafka/: README.md  app.py  test_app.py
python/_keycloak/: README.md  __init__.py  app.py  test_app.py
python/_keycloak/static/: styles.css
python/_otel/: README.md  app.py  test_app.py
python/_rabbitmq/: app.py  test_app.py
python/_testcontainers/: README.md  _redis.py
python/concurrency/: README.md  async_worker.py  test_concurrency.py  thread_worker.py
python/cpu_memory_visualization/: README.md  ex_1.py
python/debugger/: README.md  debugger_test.py
python/durable_execution/: README.md  exercise.py  test_durable_execution.py
python/grpc_exercise/: .gitignore  README.md  client.py  doubler_service.proto  doubler_service_pb2_grpc.py  server.py  test_grpc.py
python/kafka_exercise/: README.md  __init__.py  test_app.py
python/keycloak_exercise/: README.md  app.py  test_app.py
python/keycloak_exercise/templates/: index.html
python/memory_visualization/: README.md  ex_1.py  ex_2.py  ex_3.py
python/openapi/: README.md  __init__.py  app.py  client_driver.py  generate_client.py  server.py  test_app.py
python/openapi/api/default/: add_pet_pet_post.py  delete_order_store_order_order_id_delete.py  delete_pet_pet_pet_id_delete.py  find_pets_by_status_pet_find_by_status_get.py  find_pets_by_tags_pet_find_by_tags_get.py  get_inventory_store_inventory_get.py  (+6 more)
python/openapi/models/: __init__.py  api_response.py  delete_order_store_order_order_id_delete_response_delete_order_store_order_orderid_delete.py  delete_pet_pet_pet_id_delete_response_delete_pet_pet_petid_delete.py  get_inventory_store_inventory_get_response_get_inventory_store_inventory_get.py  order.py  pet.py  pet_status.py  update_pet_with_form_pet_pet_id_post_response_update_pet_with_form_pet_petid_post.py
python/opentelemetry_exercise/: README.md  test_app.py
python/parallelism/: README.md  _queue.py  _shared_memory.py  test_parallelism.py
python/rabbitmq_exercise/: README.md  test_app.py
python/testcontainers_exercise/: README.md
python/testing/: README.md  __init__.py
python/testing/src/: __init__.py  delivery.py  format.py  job_queue.py  math.py  wait.py
python/testing/tests/: test_delivery.py  test_format.py  test_job_queue.py  test_math.py  test_wait.py
python/unix_domain_sockets/: README.md  client.py  server.py  test_unix_domain_sockets.py
(+141 files in other folders)
