[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "memray>=1.19.3",
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "ruff>=0.15.14",
    "viztracer>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "testcontainers[redis]>=4.14.2",
]
