[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "memray>=1.19.3",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "ruff>=0.15.14",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "viztracer>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "pyright>=1.1.409",
    "pytest-asyncio>=0.24.0",
    "testcontainers[postgres,redis]>=4.14.2",
]
