[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "httpx>=0.27.0",
    "kafka-python>=2.3.1",
    "memray>=1.19.3",
    "numpy>=2.4.6",
    "pika>=1.3.2",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.10.1",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-distro>=0.51b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
    "opentelemetry-sdk>=1.30.0",
    "redis>=7.4.0",
    "jinja2>=3.1.6",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.30.0",
    "viztracer>=1.1.1",
    "temporalio>=1.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.0",
    "pyright>=1.1.409",
    "pytest-asyncio>=0.24.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "testcontainers[keycloak,postgres,rabbitmq,redis]>=4.14.2",
]
